# ai-video-editor

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  README.md  pyproject.toml
src/: __init__.py  audio.py  fcpxml.py  files.py  llm.py  main.py  render.py  script.py  sync.py  transcription.py  ui.py  video.py
